updated docker env files and readme

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM tutum/nginx
+FROM jwilder/nginx-proxy
 RUN rm /etc/nginx/sites-enabled/default
 ADD sites-enabled/ /etc/nginx/sites-enabled
 ADD medna.pem /etc/medna.pem
