changed filename in Dockerfile from prod.txt to requirements.txt

--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -34,7 +34,7 @@ ENV VIRTUAL_ENV=/appenv
 RUN python3 -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 RUN pip install --upgrade setuptools wheel
-RUN pip install -r requirements/prod.txt
+RUN pip install -r requirements/requirements.txt
 
 # Copy app
 COPY . .
