--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# ignore specific env files - these have settings important to installation
+# but should not be pushed to GitHub for security
+/docker/medna.env
+/docker/medna.env.db
+/docker/nginx.proxycompanion.env
