--- a/.gitignore
+++ b/.gitignore
@@ -133,7 +133,8 @@ dmypy.json
 
 # ignore specific env files - these have settings important to installation
 # but should not be pushed to GitHub for security
-/docker/medna.env
-/docker/medna.env.db
-/docker/nginx.proxycompanion.env
-/docker/gunicorn.env
+/docker-ignore/medna.env
+/docker-ignore/medna.env.db
+/docker-ignore/nginx.proxycompanion.env
+/docker-ignore/gunicorn.env
+/docker-ignore/
