--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,35 +1,37 @@
-   # ----------------------------------------
-   # MEDNA-METADATA-POSTGIS
-   # ----------------------------------------
-    medna-metadata-pgdb:
-        restart: always
-        image: postgis/postgis:12-master
-        container_name: medna-metadata-pgdb
-        ports:
-            - '5433:5432'     # expose ports - HOST:CONTAINER
-        env_file:
-            - '/home/django/medna-metadata/docker/medna.env.db'
-        volumes:
-            - 'postgres_data:/var/lib/postgresql/data/'
-
+version: "3.5"
+services:
+  # docker-compose up -d
+  # ----------------------------------------
+  # MEDNA-METADATA-POSTGIS
+  # ----------------------------------------
+  medna-metadata-pgdb:
+    restart: always
+    image: postgis/postgis:12-master
+    container_name: medna-metadata-pgdb
+    ports:
+      - '5432:5432'     # expose ports - HOST:CONTAINER
+    env_file:
+      - './medna.env.db'
+    volumes:
+      - 'postgres_data:/var/lib/postgresql/data/'
    # ----------------------------------------
    # MEDNA-METADATA
    # ----------------------------------------
-    medna-metadata:
-        restart: always
-        build:
-            context: '/home/django/medna-metadata'
-            dockerfile: './docker/web/Dockerfile'
-        container_name: medna-metadata
-        ports:
-            - '8000:8000'
-        env_file:
-            - '/home/django/medna-metadata/docker/medna.env'
-        volumes:
-            - 'static_volume:/home/django/static/'
-            - 'media_volume:/home/django/media/'
-        depends_on:
-            - medna-metadata-pgdb
+  medna-metadata:
+    restart: always
+    build:
+      context: '../'
+      dockerfile: './docker/web/Dockerfile'
+    container_name: medna-metadata
+    ports:
+      - '8000:8000'
+    env_file:
+      - './medna.env'
+    volumes:
+      - 'static_volume:/app/static/'
+      - 'media_volume:/app/media/'
+    depends_on:
+      - medna-metadata-pgdb
    # ----------------------------------------
    # NGINX-PROXY
    # ----------------------------------------
@@ -41,8 +43,8 @@
       - '443:443'
       - '80:80'
     volumes:
-      - 'static_volume:/home/django/static/'
-      - 'media_volume:/home/django/media/'
+      - 'static_volume:/app/static/'
+      - 'media_volume:/app/media/'
       - 'certs:/etc/nginx/certs'
       - 'html:/usr/share/nginx/html'
       - 'vhost:/etc/nginx/vhost.d'
@@ -56,7 +58,7 @@
   nginx-proxy-letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion
     env_file:
-      - '/home/django/medna-metadata/docker/nginx.proxycompanion.env'
+      - './nginx.proxycompanion.env'
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock:ro'
       - 'certs:/etc/nginx/certs'
