--- a/docker/web/Dockerfile.prod
+++ b/docker/web/Dockerfile.prod
@@ -8,6 +8,7 @@ FROM ubuntu:focal as builder
 WORKDIR /usr/src/app
 
 # set environment variables
+ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 ENV DEBIAN_FRONTEND noninteractive
 
