--- a/docker/web/Dockerfile.prod
+++ b/docker/web/Dockerfile.prod
@@ -44,7 +44,7 @@ FROM ubuntu:focal
 RUN mkdir -p /home/app
 
 # create the app user
-RUN addgroup -S app && adduser -S app -G app
+RUN adduser --disabled-password --gecos '' app
 
 # create the appropriate directories
 ENV HOME=/home/app
