--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,14 +1,20 @@
 name: Bug Report
-description: File a bug report
-title: "[Bug]: "
-labels: ["bug", "triage"]
-assignees:
-  - octocat
+description: File a bug/issue
+title: "[BUG] <title>"
+labels: [Bug, Needs Triage]
 body:
   - type: markdown
     attributes:
       value: |
         Thanks for taking the time to fill out this bug report!
+  - type: checkboxes
+    id: checked-issues
+    attributes:
+      label: Is there an existing issue for this?
+      description: Please search to see if an issue already exists for the bug you encountered.
+      options:
+      - label: I have searched the existing issues
+        required: true
   - type: input
     id: contact
     attributes:
@@ -18,38 +24,31 @@ body:
     validations:
       required: false
   - type: textarea
-    id: describe-bug
+    id: current-behavior
     attributes:
-      label: Describe the bug
-      description: "A clear and concise description of what the bug is."
-      placeholder: "Tell us what you see!"
+      label: Current Behavior
+      description: A concise description of what you're experiencing.
     validations:
-      required: true
-  - type: textarea
-    id: reproduce-bug
-    attributes:
-      label: Reproduction steps
-      description: "How do you trigger this bug? Please walk us through it step by step."
-      placeholder: |
-        1. Go to '...'
-        2. Click on '....'
-        3. Scroll down to '....'
-        4. See error
-      value: |
-        1.
-        2.
-        3.
-        ...
-      render: bash
-    validations:
-      required: true
+      required: false
   - type: textarea
     id: expected-behavior
     attributes:
       label: Expected Behavior
-      description: "A clear and concise description of what you expected to happen."
+      description: A concise description of what you expected to happen.
     validations:
-      required: true
+      required: false
+  - type: textarea
+    id: reproduce-behavior
+    attributes:
+      label: Steps To Reproduce
+      description: Steps to reproduce the behavior.
+      placeholder: |
+        1. 
+        2. 
+        3. 
+        ...
+    validations:
+      required: false
   - type: dropdown
     id: browsers
     attributes:
@@ -64,5 +63,15 @@ body:
     id: logs
     attributes:
       label: Relevant log output
-      description: "Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks."
+      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
       render: shell
+  - type: textarea
+    id: additional-context
+    attributes:
+      label: Anything else?
+      description: |
+        Links? References? Anything that will give us more context about the issue you are encountering!
+
+        Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+    validations:
+      required: false
