--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,7 +1,7 @@
 name: Bug Report
 description: File a bug/issue
-title: "[BUG] <title>"
-labels: [Bug, Needs Triage]
+title: "[BUG]: <title>"
+labels: ["bug", "triage"]
 body:
   - type: markdown
     attributes:
