--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,7 +1,7 @@
 name: Feature Request
 description: Request a new feature
 title: "[FEATURE] <title>"
-labels: ["feature"]
+labels: ["enhancement"]
 body:
 - type: checkboxes
   attributes:
