--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -32,19 +32,19 @@ services:
  # ----------------------------------------
  # MEDNA-METADATA
  # ----------------------------------------
-  medna-metadata:
+  medna-metadata-web:
     restart: always
     build:
       context: '../'
-      dockerfile: './docker/web/prod/Dockerfile'
-    container_name: medna-metadata
+      dockerfile: './docker/medna-metadata/prod/Dockerfile'
+    container_name: medna-metadata-web
     ports:
       - '8000:8000'
     env_file:
       - './medna.env'
     volumes:
-      - 'static_volume:/app/static/'
-      - 'media_volume:/app/media/'
+      - 'static_volume:./static/'
+      - 'media_volume:./media/'
     depends_on:
       - medna-metadata-pgdb
       - medna-metadata-rabbitmq
@@ -87,14 +87,14 @@ services:
       - '443:443'
       - '80:80'
     volumes:
-      - 'static_volume:/app/static/'
-      - 'media_volume:/app/media/'
+      - 'static_volume:./static/'
+      - 'media_volume:./media/'
       - 'certs:/etc/nginx/certs'
       - 'html:/usr/share/nginx/html'
       - 'vhost:/etc/nginx/vhost.d'
       - '/var/run/docker.sock:/tmp/docker.sock:ro'
     depends_on:
-      - medna-metadata
+      - medna-metadata-web
    # ----------------------------------------
    # NGINX-LETSENCRYPT
    # ----------------------------------------
