--- a/docker/deprecated/docker-compose.yml
+++ b/docker/deprecated/docker-compose.yml
@@ -1,25 +1,6 @@
-version: '3.8'
+version: '3.5'
 services:
   # docker-compose up -d
- # ----------------------------------------
- # MEDNA-METADATA
- # ----------------------------------------
-  medna-metadata-web:
-    restart: always
-    build:
-      context: '../'
-      dockerfile: 'docker/web/prod/Dockerfile'
-    container_name: medna-metadata-web
-    expose:
-      - 8000
-    env_file:
-      - './medna.env'
-    volumes:
-      - 'static_volume:./static/'
-      - 'media_volume:./media/'
-    depends_on:
-      - medna-metadata-pgdb
-      - medna-metadata-rabbitmq
   # ----------------------------------------
   # MEDNA-METADATA-POSTGIS
   # ----------------------------------------
@@ -49,6 +30,25 @@ services:
       - 'rabbitmq_data:/var/lib/rabbitmq/'
       - 'rabbitmq_logs:/var/log/rabbitmq'
  # ----------------------------------------
+ # MEDNA-METADATA
+ # ----------------------------------------
+  medna-metadata-web:
+    restart: always
+    build:
+      context: '../'
+      dockerfile: 'docker/web/prod/Dockerfile'
+    container_name: medna-metadata-web
+    expose:
+      - 8000
+    env_file:
+      - './medna.env'
+    volumes:
+      - 'static_volume:./static/'
+      - 'media_volume:./media/'
+    depends_on:
+      - medna-metadata-pgdb
+      - medna-metadata-rabbitmq
+ # ----------------------------------------
  # MEDNA-METADATA-CELERYWORKER
  # ----------------------------------------
   medna-metadata-celeryworker:
@@ -76,10 +76,10 @@ services:
       - medna-metadata-rabbitmq
       - medna-metadata-pgdb
  # ----------------------------------------
- # NGINX
+ # NGINX-PROXY
  # ----------------------------------------
-  nginx:
-    container_name: nginx
+  nginx-proxy:
+    container_name: nginx-proxy
     build: nginx
     restart: always
     ports:
@@ -96,6 +96,21 @@ services:
       - '/var/run/docker.sock:/tmp/docker.sock:ro'
     depends_on:
       - medna-metadata-web
+   # ----------------------------------------
+   # NGINX-LETSENCRYPT
+   # ----------------------------------------
+  nginx-proxy-letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    env_file:
+      - './nginx.proxycompanion.env'
+    volumes:
+      - '/var/run/docker.sock:/var/run/docker.sock:ro'
+      - 'certs:/etc/nginx/certs'
+      - 'html:/usr/share/nginx/html'
+      - 'vhost:/etc/nginx/vhost.d'
+    depends_on:
+      - nginx-proxy
+
 volumes:
   postgres_data:
   rabbitmq_data:
