--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream medna-metadata {
+upstream medna_metadata {
     server web:8000;
 }
 
@@ -17,7 +17,7 @@ server {
     }
 
     location / {
-        proxy_pass http://medna-metadata;
+        proxy_pass http://medna_metadata;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
