added install for docker-requirements.sh in post-builder final build

--- a/docker/web/prod/Dockerfile
+++ b/docker/web/prod/Dockerfile
@@ -64,7 +64,9 @@ WORKDIR $APP_HOME
 RUN apt-get update && apt-get install -y libpq-dev python3-pip
 COPY --from=builder /usr/src/app/wheels /wheels
 COPY --from=builder /usr/src/app/requirements/prod.txt .
+COPY --from=builder /usr/src/app/requirements/docker-requirements.sh .
 RUN pip install --no-cache /wheels/*
+RUN docker-requirements.sh
 
 # copy project
 COPY . $APP_HOME
