--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,78 +4,81 @@ services:
  # ----------------------------------------
  # MEDNA-METADATA
  # ----------------------------------------
-  medna-metadata-web:
+  medna_metadata_web:
     restart: always
     build:
       context: '../'
       dockerfile: 'docker/web/prod/Dockerfile'
-    container_name: medna-metadata-web
-    expose:
-      - 8000
+    container_name: medna_metadata_web
+    ports:
+      - 8000:8000
     env_file:
-      - './medna.env'
+      - '/home/django/medna-metadata/docker/medna.env'
     volumes:
-      - 'static_volume:/home/django/medna-metadata/static/'
-      - 'media_volume:/home/django/medna-metadata/media/'
+      - 'app_volume:/home/django/medna-metadata/'
     depends_on:
-      - medna-metadata-pgdb
-      - medna-metadata-rabbitmq
+      - medna_metadata_pgdb
+      - medna_metadata_rabbitmq
   # ----------------------------------------
   # MEDNA-METADATA-POSTGIS
   # ----------------------------------------
-  medna-metadata-pgdb:
+  medna_metadata_pgdb:
     restart: always
-    image: postgis/postgis:13-master
-    container_name: medna-metadata-pgdb
+    image: postgis/postgis:12-master
+    container_name: medna_metadata_pgdb
     command: update-postgis.sh
     ports:
       - 5432:5432     # expose ports - HOST:CONTAINER
     env_file:
-      - './medna.env.db'
+      - '/home/django/medna-metadata/docker/medna.env.db'
     volumes:
       - 'postgres_data:/var/lib/postgresql/data/'
  # ----------------------------------------
  # MEDNA-METADATA-RABBITMQ
  # ----------------------------------------
-  medna-metadata-rabbitmq:
+  medna_metadata_rabbitmq:
     restart: always
     image: rabbitmq:3.8.29-management
-    container_name: medna-metadata-rabbitmq
+    container_name: medna_metadata_rabbitmq
     ports:
       - 5672:5672
       - 15672:15672
     env_file:
-      - './medna.env'
+      - '/home/django/medna-metadata/docker/medna.env'
     volumes:
       - 'rabbitmq_data:/var/lib/rabbitmq/'
-      - 'rabbitmq_logs:/var/log/rabbitmq'
+      - 'rabbitmq_logs:/var/log/rabbitmq/'
  # ----------------------------------------
  # MEDNA-METADATA-CELERYWORKER
  # ----------------------------------------
-  medna-metadata-celeryworker:
+  medna_metadata_celeryworker:
     build:
       context: '../'
       dockerfile: 'docker/web/prod/Dockerfile'
     command: /home/django/medna-metadata/celeryworker_start.sh
     env_file:
-      - './medna.env'
+      - '/home/django/medna-metadata/docker/medna.env'
+    volumes:
+      - 'app_volume:/home/django/medna-metadata/'
     depends_on:
-      - medna-metadata-rabbitmq
-      - medna-metadata-pgdb
+      - medna_metadata_rabbitmq
+      - medna_metadata_pgdb
  # ----------------------------------------
  # MEDNA-METADATA-CELERYBEAT
  # ----------------------------------------
-  medna-metadata-celerybeat:
+  medna_metadata_celerybeat:
     build:
       context: '../'
       dockerfile: 'docker/web/prod/Dockerfile'
-    image: medna-metadata-celerybeat
+    image: medna_metadata_celerybeat
     command: /home/django/medna-metadata/celerybeat_start.sh
     env_file:
-      - './medna.env'
+      - '/home/django/medna-metadata/docker/medna.env'
+    volumes:
+      - 'app_volume:/home/django/medna-metadata/'
     depends_on:
-      - medna-metadata-rabbitmq
-      - medna-metadata-pgdb
+      - medna_metadata_rabbitmq
+      - medna_metadata_pgdb
  # ----------------------------------------
  # NGINX
  # ----------------------------------------
@@ -84,10 +87,10 @@ services:
     build: nginx
     restart: always
     ports:
-      - '443:443'
-      - '80:80'
+      - 443:443
+      - 80:80
     env_file:
-      - './medna.env'
+      - '/home/django/medna-metadata/docker/medna.env'
     volumes:
       - 'static_volume:/home/django/medna-metadata/static/'
       - 'media_volume:/home/django/medna-metadata/media/'
@@ -96,11 +99,12 @@ services:
       - 'vhost:/etc/nginx/vhost.d'
       - '/var/run/docker.sock:/tmp/docker.sock:ro'
     depends_on:
-      - medna-metadata-web
+      - medna_metadata_web
 volumes:
   postgres_data:
   rabbitmq_data:
   rabbitmq_logs:
+  app_volume:
   static_volume:
   media_volume:
   certs:
